--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,7 +18,7 @@ jobs:
 
     - name: Push to Test
       run: |
-        git clone git@github.com:test 1.git
+        git clone https://github.com/Pooja-manyam/test-1.git
         cd my-app-test
         git checkout main  # Change to the branch you want to deploy to in the "Test" repository
         cp -r ../${{ github.workspace }}/* .
