--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,11 @@ jobs:
         git clone https://github.com/Pooja-manyam/test-1.git
         cd test-1  # The repository was already cloned
         git checkout main  # Change to the branch you want to deploy to in the "Test" repository
-        cp -r ${{ github.workspace }}/* .  # Copy the contents to the root of "test-1"
+
+        # Copy all the files from the Dev repository to the Test repository
+        cp -r ${{ github.workspace }}/* .
+
+        # Commit and push the changes
         git add .
         git commit -m "Automated push from Dev to Test"
         git push
